fixed video controls overlapping header

--- a/index.css
+++ b/index.css
@@ -69,6 +69,7 @@ header {
   height: 50px;
   position: fixed;
   width: 100%;
+  z-index: 100;
 }
 
 menu .nav-item {
